--- a/package.json
+++ b/package.json
@@ -6,12 +6,17 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "dev": "nodemon --ignore --exec babel-node ./src/server.js"
+    "dev": "env-cmd -f ./src/config/.dev.env nodemon --ignore --exec babel-node ./src/server.js"
   },
+  "type": "module",
   "author": "kolawole olaniyi",
   "license": "ISC",
   "dependencies": {
-    "@google-cloud/translate": "^7.2.0"
+    "@google-cloud/translate": "^7.2.0",
+    "env-cmd": "^10.1.0",
+    "express": "^4.18.2",
+    "handlebars": "^4.7.7",
+    "hbs": "^4.2.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.21.0",
